# MagInt

./: CITATIONS.bib  CMakeLists.txt  README.md  requirements.txt
Examples/Wien2k/Ba2MgReO6_two_eq_sites/Ba2MgReO6/: Ba2MgReO6.dmftsym  Ba2MgReO6.indmftpr  Ba2MgReO6.outputkgen  Ba2MgReO6.outputnn  Ba2MgReO6.struct  maginteract.ini
Examples/Wien2k/Ba2MgReO6_two_ineq_sites/Ba2MgReO6/: Ba2MgReO6.dmftsym  Ba2MgReO6.indmftpr  Ba2MgReO6.outputkgen  Ba2MgReO6.outputnn  Ba2MgReO6.py  Ba2MgReO6.struct  maginteract.ini
Examples/Wien2k/Ba2ZnOsO6_one_site/Ba2ZnOsO6/: Ba2ZnOsO6.dmftsym  Ba2ZnOsO6.indmftpr  Ba2ZnOsO6.outputkgen  Ba2ZnOsO6.outputnn  Ba2ZnOsO6.py  Ba2ZnOsO6.struct  gener_StBas.py  maginteract.ini
doc/: CMakeLists.txt
doc/source/: HubbardI_interact.rst  HubbardI_solver.rst  MagInteract.rst  Multipolar.rst  Parser.rst  Read_input.rst  Read_kp_sym.rst  Shells.rst  conf.py  documentation.rst  index.rst  installation.rst  modules.rst  run_dos.rst  run_magint.rst  run_shell.rst  run_shift_mu.rst  utils.rst
fortran/MagInt/: kind_map
fortran/magint/: .f2py_f2cmap  CMakeLists.txt  hubbard_I.f90
misc/Wien2k/: README  nn.f  nn.patch
python/MagInt/: CMakeLists.txt  HubbardI_interact.py  HubbardI_solver.py  MagInteract.py  Multipolar.py  Parser.py  Read_input.py  Read_kp_sym.py  Shells.py  __init__.py  hubbard_I.py  main.py  run_dos.py  run_magint.py  run_shell.py  run_shift_mu.py  utils.py
python/magint/: HubbardI_interact.py  HubbardI_solver.py  Parser.py  Read_input.py  Read_kp_sym.py  run_dos.py  run_magint.py  run_shell.py  utils.py
test/: CMakeLists.txt
test/interact/: ref.h5  test.py
test/solver/: test.py
test/vaspkpoints/: IBZKPT  ref.h5  test.py
test/vaspshells/: POSCAR  maginteract.ini  ref.h5  test.py
test/wien2kkpoints/: case.dmftsym  case.outputkgen  ref.h5  test.py
test/wien2kshells/: ref.h5  test.py  wien2kshells.outputnn
